# STRIDER

./: .gitignore  CMakeLists.txt  Readme.md
apps/: main.cpp
include/: flight_control.hpp  mj_viewer_helper.hpp  mpc_wrapper.hpp  params.hpp  utils.hpp
modules/geometry_ctrl/include/: fdcl_control.hpp  fdcl_matrix_utils.hpp
modules/geometry_ctrl/src/: fdcl_matrix_utils.cpp
resources/geometry_ctrl/src/: fdcl_control.cpp
resources/mpc_py/: mmap_manager.py  model.py  mpc_viewer.py  params.py  solver.py  strider.json
resources/mujoco/: JellyFish.xml
src/: flight_control.cpp  mj_viewer_helper.cpp  mpc_wrapper.cpp
